# fun-with-llms

./: pyproject.toml
LoRA/: GPT2_FR_LoRA.ipynb
stream-transformers-input-tokens/: gpt2.ipynb
zero_shot_classification/: main_gemma.py  main_mistral.py  main_vertex.py  mixin.py
zero_shot_classification/llm_providers/: gemma_models.py  mistral_llama_models.py  vertex_models.py
